--- a/Events.html
+++ b/Events.html
@@ -6,9 +6,9 @@
 <title>Events Deggendorf</title>
 <meta property="og:title" content="Student Events Deggendorf" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://leanderziehm.github.io/Deggendorf/Events.html" />
+<meta property="og:url" content="https://events4students.github.io" />
 <meta property="og:description" content="Events for Students at the THD. Sports, cinema and more.">
-<meta property="og:image" content="https://leanderziehm.github.io/Deggendorf/images/OG1.jpg" />
+<meta property="og:image" content="https://events4students.github.io/images/icons/OG1.jpg" />
 
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
