--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 
 <meta property="og:title" content="Events Deggendorf" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://leanderziehm.github.io/Deggendorf/Events.html" />
+<meta property="og:url" content="https://events4students.github.io" />
 <meta property="og:description" content="Events for Students at the THD. Sports, cinema and more.">
-<meta property="og:image" content="https://leanderziehm.github.io/Deggendorf/images/OG1.jpg" />
+<meta property="og:image" content="https://events4students.github.io/images/icons/OG1.jpg" />
 
 <script src="../test.js" type="text/javascript" charset="utf-8"></script>
 
