--- a/Event.html
+++ b/Event.html
@@ -12,7 +12,7 @@
 <meta property="og:image" content="https://events4students.github.io/images/icons/OG1.jpg" />
 
 
-<script src="../test.js" type="text/javascript" charset="utf-8"></script>
+<script src="https://leanderziehm.github.io/test.js" type="text/javascript" charset="utf-8"></script>
 <script src="eventsJson.js"></script>
 <script src="main.js" type="text/javascript" charset="utf-8"></script>
 <!-- <link rel="stylesheet" href="icons/font-awesome5.15.4.all.min.css"/> -->
