--- a/Events.html
+++ b/Events.html
@@ -13,7 +13,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Events Deggendorf</title>
-<script src="../test.js" type="text/javascript" charset="utf-8"></script>
+<script src="https://leanderziehm.github.io/test.js" type="text/javascript" charset="utf-8"></script>
 <script src="eventsJson.js"></script>
 <script src="main.js" type="text/javascript" charset="utf-8"></script>
 
