--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <meta property="og:description" content="Events for Students at the THD. Sports, cinema and more.">
 <meta property="og:image" content="https://events4students.github.io/images/icons/OG1.jpg" />
 
-<script src="../test.js" type="text/javascript" charset="utf-8"></script>
+<script src="https://leanderziehm.github.io/test.js" type="text/javascript" charset="utf-8"></script>
 
 <style>
 
