--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 
 <script src="https://leanderziehm.github.io/test.js" type="text/javascript" charset="utf-8"></script>
 
+    <script src="based/app.js"></script>
+    <script src="based/base.js"></script>
+    <script src="based/track.js"></script>
+
 <style>
 
 </style>
