--- a/Events.html
+++ b/Events.html
@@ -23,6 +23,15 @@
     <script src="based/base.js"></script>
     <script src="based/track.js"></script>
 
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-JLJBXY84HE"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-JLJBXY84HE');
+</script>
+
 </head>
 <body>
 
