--- a/Events.html
+++ b/Events.html
@@ -24,6 +24,10 @@
     <script src="based/track.js"></script>
 
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-JLJBXY84HE"></script>
+
+
+<script src="https://self-hosted-analytics.vercel.app/track.js"></script>
+
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
