Add Umami analytics script to index.html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <link rel="manifest" href="manifest.webmanifest">
 
 
-
+<script defer src="https://umami.leanderziehm.com/script.js" data-website-id="9ea77169-a7cf-4dd2-b129-ddef65afa54b"></script>
 <script src="https://leanderziehm.github.io/test.js" type="text/javascript" charset="utf-8"></script>
 
     <script src="based/app.js"></script>
