Add Umami analytics script to Events.html

--- a/Events.html
+++ b/Events.html
@@ -25,7 +25,7 @@
 
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-JLJBXY84HE"></script>
 
-
+<script defer src="https://umami.leanderziehm.com/script.js" data-website-id="9ea77169-a7cf-4dd2-b129-ddef65afa54b"></script>
 <script src="https://self-hosted-analytics.vercel.app/track.js"></script>
 
 <script>
