--- a/CalendarBroken.html
+++ b/CalendarBroken.html
@@ -10,6 +10,7 @@
 
     <script src="eventsJson.js"></script>
     <script src="main.js" type="text/javascript" charset="utf-8"></script>
+    <script defer src="https://umami.leanderziehm.com/script.js" data-website-id="9ea77169-a7cf-4dd2-b129-ddef65afa54b"></script>
     
 <title>Event Calendar</title>
 <style>
