--- a/Crop0.html
+++ b/Crop0.html
@@ -21,6 +21,7 @@
             border: 1px solid #000;
         }
     </style>
+    <script defer src="https://umami.leanderziehm.com/script.js" data-website-id="9ea77169-a7cf-4dd2-b129-ddef65afa54b"></script>
 </head>
 <body>
     <h1>Upload and Crop Image</h1>
