--- a/Editor.html
+++ b/Editor.html
@@ -10,6 +10,8 @@
 <meta property="og:description" content="Events for Students at the THD. Sports, cinema and more.">
 <meta property="og:image" content="https://events4students.github.io/images/icons/OG1.jpg" />
 
+<script defer src="https://umami.leanderziehm.com/script.js" data-website-id="9ea77169-a7cf-4dd2-b129-ddef65afa54b"></script>
+
 <script src="eventsJson.js"></script>
 <script src="main.js" type="text/javascript" charset="utf-8"></script>
     <script src="based/app.js"></script>
