--- a/Users.html
+++ b/Users.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<script defer src="https://umami.leanderziehm.com/script.js" data-website-id="9ea77169-a7cf-4dd2-b129-ddef65afa54b"></script>
 <title>Users</title>
 
     <script src="based/app.js"></script>
