--- a/EditorBackup.html
+++ b/EditorBackup.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Event Details</title>
+<script defer src="https://umami.leanderziehm.com/script.js" data-website-id="9ea77169-a7cf-4dd2-b129-ddef65afa54b"></script>
 <meta property="og:title" content="Events Deggendorf" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https:
